--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body{
     height: 100%;
     background-color:#F8FAFC;
     padding: 2.2em;
-    margin: 100px auto;
+    margin: 0 auto;
 }
 h1{
     font-size: 2.25rem;
